fix: hide scrollbars

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,3 +87,17 @@ details.ec-section > summary > div.ec-line > div.code {
     stroke-dashoffset: 0;
   }
 }
+
+/* pasted from stackoverflow because this is just one of those things */
+/* https://stackoverflow.com/a/49278385 */
+.no-scrollbar {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  /* WebKit */
+  width: 0;
+  height: 0;
+}
